--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 		"ancient": "clojure -Sdeps '{:deps {com.github.liquidz/antq {:mvn/version \"RELEASE\"}}}' -m antq.core",
 		"watch": "npx shadow-cljs watch app browser-test karma-test",
 		"release": "npx shadow-cljs release app",
-		"build-report": "npx shadow-cljs run shadow.cljs.build-report app target/build-report.html"
+		"build-report": "npx shadow-cljs run shadow.cljs.build-report app target/build-report.html",
+		"server": "node ./server/bin/www"
 	},
 	"dependencies": {
 		"bulma-toast": "^2.4.2",
@@ -13,6 +14,7 @@
 		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
+		"npm-run-all": "^4.1.5",
 		"shadow-cljs": "2.20.5",
 		"source-map-support": "^0.5.21"
 	}
