--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "json-format": "^1.0.1",
     "morgan": "~1.9.1"
   }
 }
