--- a/server/app-db.json
+++ b/server/app-db.json
@@ -2,18 +2,26 @@
 	"people": {
 		"4e002447-0d56-42cb-8de8-95ce3907ce34": {
 			"first-name": "Rodney",
-			"last-name": "Fartfinger",
+			"last-name": "Goatler",
 			"team": "Cheese Patrol",
-			"full-name": "Rodney Fartfinger",
+			"full-name": "Rodney Goatler",
 			"person-id": "4e002447-0d56-42cb-8de8-95ce3907ce34"
+		},
+		"82fe54f7-4552-45a1-9477-4c1068b076fc": {
+			"first-name": "Tiffany",
+			"last-name": "Fishjuggler",
+			"team": "Pisces",
+			"attachment-style": "Anxious",
+			"full-name": "Tiffany Fishjuggler",
+			"person-id": "82fe54f7-4552-45a1-9477-4c1068b076fc"
 		}
 	},
 	"teams": {
 		"6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b": {
 			"people": [],
 			"name": "Test Team",
-			"charter": "Farting",
-			"values": "Poo",
+			"charter": "Cheese, Grommets, and Weasels",
+			"values": "Fishing, Basketball, and World Hegemony",
 			"team-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b"
 		}
 	}
