Change structure of person to keep sets of documents in a data property. Put all profile- related data in profile. Fix navigation bug in tabbed-view - differentiate between HP and other pages.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -5,7 +5,12 @@
 			"last-name": "Goatlerss",
 			"team": "Cheese Patrol",
 			"full-name": "Rodney Goatlerss",
-			"person-id": "4e002447-0d56-42cb-8de8-95ce3907ce34"
+			"person-id": "4e002447-0d56-42cb-8de8-95ce3907ce34",
+			"profile": {
+				"feedback": {
+					"feedback-medium": "feeeeeeeeeeeee"
+				}
+			}
 		},
 		"82fe54f7-4552-45a1-9477-4c1068b076fc": {
 			"first-name": "Tiffany",
