Update Tasks to use new data structure.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -5,18 +5,12 @@
 			"last-name": "Goatlerss",
 			"team": "Cheese Patrol",
 			"full-name": "Rodney Goatlerss",
-			"person-id": "4e002447-0d56-42cb-8de8-95ce3907ce34",
-			"profile": {
-				"feedback": {
-					"feedback-medium": "feeeeeeeeeeeee"
-				}
-			}
+			"person-id": "4e002447-0d56-42cb-8de8-95ce3907ce34"
 		},
 		"82fe54f7-4552-45a1-9477-4c1068b076fc": {
 			"first-name": "Tiffany",
 			"last-name": "Fishjuggler",
 			"team": "Pisces",
-			"attachment-style": "Anxious",
 			"full-name": "Tiffany Fishjuggler",
 			"person-id": "82fe54f7-4552-45a1-9477-4c1068b076fc"
 		}
