--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -2,9 +2,9 @@
 	"people": {
 		"4e002447-0d56-42cb-8de8-95ce3907ce34": {
 			"first-name": "Rodney",
-			"last-name": "Goatlerss",
+			"last-name": "Goatler",
+			"full-name": "Rodney Goatler",
 			"team": "Cheese Patrol",
-			"full-name": "Rodney Goatlerss",
 			"person-id": "4e002447-0d56-42cb-8de8-95ce3907ce34"
 		},
 		"82fe54f7-4552-45a1-9477-4c1068b076fc": {
