Implement delete person updates.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -20,6 +20,13 @@
 					}
 				}
 			}
+		},
+		"3aacdee4-b0be-4952-b89f-ea18e1d6c99b": {
+			"first-name": "Marty",
+			"last-name": "Slinkschrieber",
+			"full-name": "Marty Slinkschrieber",
+			"team": "Potato Heads",
+			"person-id": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b"
 		}
 	},
 	"teams": {
