Fix more vscode refactor errors.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -12,14 +12,7 @@
 			"last-name": "Fishjuggler",
 			"team": "Pisces",
 			"full-name": "Tiffany Fishjuggler",
-			"person-id": "82fe54f7-4552-45a1-9477-4c1068b076fc",
-			"data": {
-				"tasks": {
-					"2c018cbb-b269-4da7-a942-b5ac19d44039": {
-						"completed": true
-					}
-				}
-			}
+			"person-id": "82fe54f7-4552-45a1-9477-4c1068b076fc"
 		},
 		"3aacdee4-b0be-4952-b89f-ea18e1d6c99b": {
 			"first-name": "Marty",
