Update a team's list of people when saving the team on a Person record.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -18,7 +18,7 @@
 			"first-name": "Marty",
 			"last-name": "Slinkschrieber",
 			"full-name": "Marty Slinkschrieber",
-			"team": "07a95996-8fb9-4efc-b90f-065f10e2d723",
+			"team": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b",
 			"person-id": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b"
 		}
 	},
@@ -73,8 +73,8 @@
 			},
 			"people": [
 				{
-					"value": "4e002447-0d56-42cb-8de8-95ce3907ce34",
-					"label": "Rodman Goatler"
+					"value": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b",
+					"label": "Marty Slinkschrieber"
 				}
 			]
 		},
