--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -52,8 +52,7 @@
 						"details": "test 2345",
 						"due-date": "2023-02-06",
 						"completed": false,
-						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b",
-						"is-team": true
+						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b"
 					},
 					"a288c467-0198-47dd-aaa3-bce76365d9b7": {
 						"task-id": "a288c467-0198-47dd-aaa3-bce76365d9b7",
@@ -68,7 +67,8 @@
 						"name": "Test Team Taska",
 						"details": "sdf",
 						"due-date": "",
-						"completed": false
+						"completed": false,
+						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b"
 					}
 				}
 			},
