Fix bug with toggle-task-all-status.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -60,16 +60,18 @@
 						"name": "Team Task TEST",
 						"details": "test",
 						"due-date": "",
-						"completed": true,
-						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b"
+						"completed": false,
+						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b",
+						"is-team": true
 					},
 					"b0dcac87-f323-41a5-aacd-1a574827d1dd": {
 						"task-id": "b0dcac87-f323-41a5-aacd-1a574827d1dd",
 						"name": "Test Team Taska",
 						"details": "sdf",
 						"due-date": "",
-						"completed": false,
-						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b"
+						"completed": true,
+						"owner-id": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b",
+						"is-team": true
 					}
 				}
 			},
