Fix broken selects.
Reported-by: J. Aaron Crick

--- a/server/data/app-db.json
+++ b/server/data/app-db.json
@@ -97,6 +97,48 @@
 					"label": "Tiffany Fishjuggler"
 				}
 			]
+		},
+		"00821527-39cb-4706-b926-0f6e8fb5c1a5": {
+			"first-name": "Marty",
+			"last-name": "Slinkschrieber",
+			"full-name": "Marty Slinkschrieber",
+			"team": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b",
+			"person-id": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b",
+			"data": {
+				"tasks": {
+					"50551e28-3dec-44be-bed6-46406cd21be6": {
+						"task-id": "50551e28-3dec-44be-bed6-46406cd21be6",
+						"name": "Marty's Task",
+						"details": "Go get 'em, Marty!!",
+						"due-date": "2023-02-20",
+						"completed": true,
+						"owner-id": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b",
+						"is-team": false
+					}
+				}
+			},
+			"team-id": "00821527-39cb-4706-b926-0f6e8fb5c1a5"
+		},
+		"30b74fb9-4c98-4f91-aa39-c5433ae46dc4": {
+			"first-name": "Marty",
+			"last-name": "Slinkschrieber",
+			"full-name": "Marty Slinkschrieber",
+			"team": "6c5ecd25-2c86-4fa8-9131-357b7f4f0b0b",
+			"person-id": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b",
+			"data": {
+				"tasks": {
+					"50551e28-3dec-44be-bed6-46406cd21be6": {
+						"task-id": "50551e28-3dec-44be-bed6-46406cd21be6",
+						"name": "Marty's Task",
+						"details": "Go get 'em, Marty!!",
+						"due-date": "2023-02-20",
+						"completed": false,
+						"owner-id": "3aacdee4-b0be-4952-b89f-ea18e1d6c99b",
+						"is-team": false
+					}
+				}
+			},
+			"team-id": "30b74fb9-4c98-4f91-aa39-c5433ae46dc4"
 		}
 	}
 }
